# idea-space

./: .env.example  .gitignore  README.md  docker-compose.yml  run.sh
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/config/: celery.py  settings.py  urls.py
backend/config/utils/: redis.py
backend/pages/: urls.py
backend/pages/managers/: __init__.py  page.py
backend/pages/migrations/: 0001_initial.py
backend/pages/models/: __init__.py  page.py
backend/pages/serializers/: __init__.py  page.py
backend/pages/views/: __init__.py  page.py
backend/users/: admin.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/users/management/commands/: clear_tokens.py
backend/users/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/api/: index.ts
frontend/api/core/: OpenAPI.ts
frontend/api/models/: TokenObtainPair.ts  User.ts
frontend/api/services/: Service.ts
frontend/assets/styles/: tailwind.css
frontend/assets/styles/primevue/: toast.css
frontend/components/: TestButton.vue
frontend/openapi/: openapi.json
frontend/pages/: index.vue  login.vue
frontend/stores/: auth.ts  test.ts
frontend/utils/: API.ts  toast.ts
